--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,11 +10,11 @@
 
     {% include navigation.html %}
 
-    <section id="post" class="container content-section text-justify">
+    <section id="post" class="container content-section text-left">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
 
-          {% include swipe-instructions.html %}
+          #{% include swipe-instructions.html %}
 
           <h1><strong>{{ page.title }}</strong></h1>
           <h4>
