--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,13 +10,11 @@
 
     {% include navigation.html %}
 
-    <section id="post" class="container content-section text-left">
+    <section id="post" class="container content-section text-justify">
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
 
-          {% include swipe-instructions.html %}
-
-          <h1><strong>{{ page.title }}</strong></h1>
+          <h1><strong><left>{{ page.title }}</left></strong></h1>
           <h4>
             <strong>{{ page.date | date_to_string }}</strong>
             <small>
